<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background_color"
    tools:context=".ui.authentication.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardCornerRadius="80dp"
        android:layout_marginTop="-150dp">
        <RelativeLayout
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/splash_bg">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/virus_bg"
                android:scaleType="centerCrop"
                android:layout_centerInParent="true"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="240dp"
                android:src="@drawable/person1"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/main_icon"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/app_name_text"/>
            <TextView
                android:id="@+id/app_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/banner_app_name"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_regular"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="48dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_register"
                android:transitionName="email_animate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/hint_email"
                android:textColorHint="@color/accent_color2">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="8dp"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_register"
                android:transitionName="password_animate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/hint_password"
                android:textColorHint="@color/accent_color2">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_verify_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/hint_password_verify"
                android:textColorHint="@color/accent_color2">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/id_card_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/hint_id_card"
                android:textColorHint="@color/accent_color2">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_person_blue_24"
                    android:drawablePadding="8dp"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/hint_phone_number"
                android:textColorHint="@color/accent_color2">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_local_phone_24"
                    android:drawablePadding="8dp"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/register_button"
                android:transitionName="button_animate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_rounded_bg"
                app:backgroundTint="@color/accent_color"
                android:text="@string/register_submit_button"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>